--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="og:title" content="Little Lemon Restaurant" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to Little Lemon, a cozy and charming restaurant featuring delicious Italian-inspired dishes. Our menu includes a variety of pasta, seafood, and meat dishes, as well as an extensive wine list. We also offer online ordering and reservations for your convenience. Come visit us and experience the taste of Italy at Little Lemon."
     />
+    <meta
+      name="og:description"
+      content="Welcome to Little Lemon, a cozy and charming restaurant featuring delicious Italian-inspired dishes. Our menu includes a variety of pasta, seafood, and meat dishes, as well as an extensive wine list. We also offer online ordering and reservations for your convenience. Come visit us and experience the taste of Italy at Little Lemon."
+    />
+    <meta name="og:image" content="https://www.example.com/images/little-lemon.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
